--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.10"
+    "hardhat": "^2.22.10",
+    "hardhat-coverage": "^0.9.19"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
