--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat-coverage": "^0.9.19"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
